# musande

./: .gitignore  Cargo.toml  Makefile  README.md  clippy.toml
.claude/: settings.local.json
crates/musande-alignment/: Cargo.toml
crates/musande-alignment/src/: alignment_engine.rs  equivalence_validator.rs  lib.rs  zero_computation.rs
crates/musande-applications/: Cargo.toml
crates/musande-cli/: Cargo.toml
crates/musande-core/: Cargo.toml
crates/musande-core/src/: error.rs  lib.rs  math.rs
crates/musande-core/src/constants/: mod.rs  physical.rs  saint_stella.rs
crates/musande-core/src/types/: mod.rs  s_entropy.rs  tri_dimensional.rs
crates/musande-navigation/: Cargo.toml
crates/musande-ridiculous/: Cargo.toml
crates/musande-ridiculous/src/: lib.rs
crates/musande-service/: Cargo.toml
demos/: README.md  demo_visualizations.py  generate_validation_report.py  quick_demo.py  requirements.txt  run_all_demonstrations.py  st_stellas_circuits.py  st_stellas_dictionary.py  st_stellas_molecular_language.py  st_stellas_neural_networks.py  st_stellas_sequence.py  test_core_functionality.py  validate_framework.py  visualization_utils.py
demos/demo_results/: consciousness_system_20250912_041537.json  genomic_analysis_20250912_041537.json  miraculous_circuits_20250912_041537.json  molecular_transformation_20250912_041537.json  quick_demo_20250912_041432.json  semantic_navigation_20250912_041537.json  validation_report_20250912_041515.txt
docs/: audio.tex  doctrine.md  empty-dictionary.tex  gospel.tex  perception.tex  pharma.tex  problem-reduction.tex  problems.md  saint.md  social-systems.md  stellas-constant.md  structure.md  timekeeping.md  truth.tex  vision.tex
docs/problem-solving/: observer.tex  precision-by-difference.tex  problem-defination.tex  solvability.tex  st-stellas-principle.tex
docs/publication/: conditions-for-meaning.tex  consequences-of-belief.tex  s-entropy-arxiv.tex  st-stella-problem-solving.tex  st-stellas-constant.tex  st-stellas-framework.tex  st-stellas-regicide.tex  st-stellas-spectrometry.tex
docs/speed/: faster-than-light-travel.tex  land-speed-record.tex  st-stella-problem-solving.tex  underwater-sonic-boom.aux  underwater-sonic-boom.out  underwater-sonic-boom.tex  zero-lag-systems.tex
epistemology/agent-coordination/: finite-agents-coordination.aux  finite-agents-coordination.bbl  finite-agents-coordination.blg  finite-agents-coordination.out  finite-agents-coordination.tex  finite-agents-coordination.toc  references.bib
epistemology/agent-instantiation/: agent-instantiation-syntax.aux  agent-instantiation-syntax.out  agent-instantiation-syntax.tex  references.bib
epistemology/artificial-structures/: _main_head.tex  _s_construct.tex  _s_floor.tex  _s_gating.tex  _s_ground.tex  _s_invariant.tex  _s_master.tex  _s_measurement.tex  _s_monotone.tex  _s_negation.tex  _s_quotient.tex  _s_residual.tex  _s_setting.tex  _s_validation.tex  instantiation-of-finite-weighted-graphs.aux  instantiation-of-finite-weighted-graphs.bbl  instantiation-of-finite-weighted-graphs.blg  instantiation-of-finite-weighted-graphs.fdb_latexmk  instantiation-of-finite-weighted-graphs.fls  instantiation-of-finite-weighted-graphs.out  instantiation-of-finite-weighted-graphs.tex  instantiation-of-finite-weighted-graphs.toc  references.bib
epistemology/buhera/: knowledge-thermodynamics.tex  trajectory-completion-mechanism.tex  unconstrained-subtasks-computing.tex
epistemology/epistemological-mode-equivalence/: epistemological-methodology.aux  epistemological-methodology.bbl  epistemological-methodology.blg  epistemological-methodology.out  epistemological-methodology.tex  epistemological-methodology.toc  references.bib
epistemology/irreducible-bounded-phase-space/: _main_head.tex  _s1.tex  _s2.tex  _s_detect.tex  _s_floor.tex  _s_inquiry.tex  _s_locating.tex  _s_negation.tex  _s_numerical.tex  _s_residue.tex  _s_scope.tex  irreducible-bounded-phase-space.aux  irreducible-bounded-phase-space.bbl  irreducible-bounded-phase-space.blg  irreducible-bounded-phase-space.fdb_latexmk  irreducible-bounded-phase-space.fls  irreducible-bounded-phase-space.out  irreducible-bounded-phase-space.tex  irreducible-bounded-phase-space.toc  references.bib
epistemology/operational-intelligence/: operational-agent-intelligence.aux  operational-agent-intelligence.bbl  operational-agent-intelligence.blg  operational-agent-intelligence.out  operational-agent-intelligence.tex  operational-agent-intelligence.toc  references.bib
epistemology/sources/: bounded-phase-space-law.tex  embedded-agent.tex  loschmidt-paradox-resolution.tex  non-playing-character-physiology.tex  non-playing-character-purpose.tex  occupation-vs-specification.tex  recursive-depths.tex  spectroscopic-derivation-of-elements.tex  unconstrained-depth-minimisation.tex
epistemology/split-attention-synchronised-agents/: buhera-integration.md  references.bib  split-attention-synchronised-agents.aux  split-attention-synchronised-agents.bbl  split-attention-synchronised-agents.blg  split-attention-synchronised-agents.fdb_latexmk  split-attention-synchronised-agents.fls  split-attention-synchronised-agents.out  split-attention-synchronised-agents.tex
epistemology/synchronised-coordination/: comments.md  references.bib  response-to-reviewers.md  synchronised-agent-coordination.aux  synchronised-agent-coordination.bbl  synchronised-agent-coordination.blg  synchronised-agent-coordination.out  synchronised-agent-coordination.tex  synchronised-agent-coordination.toc
epistemology/unconstrained-subtask-recursion/: references.bib  unconstrained-subtask-recursion-equivalence.aux  unconstrained-subtask-recursion-equivalence.bbl  unconstrained-subtask-recursion-equivalence.blg  unconstrained-subtask-recursion-equivalence.out  unconstrained-subtask-recursion-equivalence.tex  unconstrained-subtask-recursion-equivalence.toc
examples/s_entropy_demo/: Cargo.toml
examples/s_entropy_demo/src/: optimization_demo.rs
src/: lib.rs  main.rs
web/: package-lock.json  package.json
web/public/: deep_impact_tv_from_the_matrix.glb
(+280 files in other folders)
