[workspace]
members = [
    "crates/musande-core",
    "crates/musande-alignment", 
    "crates/musande-navigation",
    "crates/musande-ridiculous",
    "crates/musande-service",
    "crates/musande-applications/quantum",
    "crates/musande-applications/business", 
    "crates/musande-applications/research",
    "crates/musande-cli",
    "crates/musande-bindings/python",
    "crates/musande-bindings/javascript",
    "crates/musande-bindings/c"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Kundai Farai Sachikonye <kundai@fullscreentriangle.com>"]
license = "Apache-2.0"
repository = "https://github.com/fullscreentriangle/musande"
homepage = "https://musande.fullscreentriangle.com"
documentation = "https://docs.rs/musande"
description = "The S-Entropy Framework: Mathematical substrate of consciousness and universal problem solving through Biological Maxwell Demon integration"
keywords = ["s-entropy", "consciousness", "biological-maxwell-demon", "entropy-navigation", "problem-solving"]
categories = ["science", "algorithms", "mathematics", "simulation"]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Core mathematical dependencies
nalgebra = { version = "0.33", features = ["serde", "arbitrary", "rand"] }
ndarray = { version = "0.15", features = ["serde", "rayon"] }
num-complex = "0.4"
statrs = "0.17"
approx = "0.5"

# Async and concurrency
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
rayon = "1.8"
crossbeam = "0.8"

# Serialization and configuration
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"

# Quantum computing dependencies (optional)
quantum = { version = "0.2", optional = true }
qiskit = { version = "0.1", optional = true }

# Neural network dependencies
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tch = { version = "0.14", optional = true }

# Database and persistence
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Web and API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# CLI dependencies
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Development and testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
mockall = "0.12"

# FFI bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
napi = { version = "2.14", features = ["napi4"], optional = true }
cbindgen = "0.26"

[workspace.features]
default = ["std"]
std = []
python-bindings = ["pyo3"]
javascript-bindings = ["napi"] 
quantum-computing = ["quantum", "qiskit"]
neural-networks = ["tch"]
full = ["python-bindings", "javascript-bindings", "quantum-computing", "neural-networks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
overflow-checks = true 