[workspace]
resolver = "2"
members = [
    "crates/musande-core",
    "crates/musande-alignment", 
    "crates/musande-navigation",
    "crates/musande-ridiculous",
    "crates/musande-service",
    "crates/musande-applications",
    "crates/musande-cli",
    "examples/s_entropy_demo",
    # Temporarily commented out until implementation
    # "bindings/python",
    # "bindings/javascript", 
    # "bindings/c",
    # "services/entropy-solver-service",
    # "services/timekeeping-integration",
    # "examples/basic_alignment",
    # "examples/ridiculous_solutions",
    # "examples/quantum_enhancement",
    # "examples/business_optimization",
    # "examples/scientific_discovery",
    # "tools/s_entropy_analyzer",
    # "tools/impossibility_visualizer",
    # "tools/alignment_debugger",
    # "research/experimental_validation",
    # "research/mathematical_proofs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/musande"
description = "Implementation of the S-Entropy Framework for universal problem solving through tri-dimensional entropy navigation"
keywords = ["s-entropy", "entropy", "navigation", "quantum", "optimization", "saint-stella-lorraine"]
categories = ["science", "mathematics", "algorithms"]
homepage = "https://s-entropy.org"
documentation = "https://docs.rs/musande"

[workspace.dependencies]
# Core crates
musande-core = { path = "crates/musande-core", version = "0.1.0" }
musande-alignment = { path = "crates/musande-alignment", version = "0.1.0" }
musande-navigation = { path = "crates/musande-navigation", version = "0.1.0" }
musande-ridiculous = { path = "crates/musande-ridiculous", version = "0.1.0" }
musande-service = { path = "crates/musande-service", version = "0.1.0" }
musande-applications = { path = "crates/musande-applications", version = "0.1.0" }

# Mathematical computation
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"
rand = "0.8"
statrs = "0.16"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Service framework
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = "0.21"

# CLI framework
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Performance optimization
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Language bindings
pyo3 = { version = "0.20", features = ["extension-module"] }
napi = { version = "2.14", default-features = false, features = ["napi4"] }
napi-derive = "2.14"
wasm-bindgen = "0.2"
cbindgen = "0.26"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# AI and ML integration
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tch = "0.14"

# Quantum computing
quantum = "0.2"
qiskit = "0.1"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true

[package]
name = "musande"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
musande-core.workspace = true
musande-alignment.workspace = true
musande-navigation.workspace = true
musande-ridiculous.workspace = true
musande-service.workspace = true
musande-applications.workspace = true
tokio.workspace = true
anyhow.workspace = true

[[bin]]
name = "musande"
path = "src/main.rs"

[lib]
name = "musande"
path = "src/lib.rs" 