[package]
name = "s_entropy_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
musande-core = { path = "../../crates/musande-core" }
musande-alignment = { path = "../../crates/musande-alignment" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "optimization_demo"
path = "src/optimization_demo.rs"

[[bin]]
name = "scientific_discovery"
path = "src/scientific_discovery.rs"

[[bin]]
name = "business_strategy"
path = "src/business_strategy.rs" 